# devcontainer-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.cpp
